--- a/labs/lab4/index.html
+++ b/labs/lab4/index.html
@@ -8,6 +8,8 @@
 	<h1>Secure Application Develpment</h1>
 	<img src="images/myprofile.jpg" width="130px" height="120px"></img>
 	<h2>Author: Rakesh S V Reddy</h2>
+	<h3>Student Id: 1015977720</h3>
+	<h4>LAB 4</h4>
 	<div id="date" onclick="document.getElementById('date').innerHTML=Date()">Show Date()</div>
 	<script>
 	document.write("Content generated from document.write");
