--- a/lectures-code/lecture25-ajax-websocket/websocket/websocketchatclient.html
+++ b/lectures-code/lecture25-ajax-websocket/websocket/websocketchatclient.html
@@ -11,7 +11,7 @@ if (window.WebSocket) {
 } else {
   alert("HTML5 WebSocket is not supported");
 }
-var myWebSocket = new WebSocket('ws://echo.websocket.org');
+var myWebSocket = new WebSocket('ws://rakeshsv.secad.com:8001');
 myWebSocket.onopen = function() { 
 	console.log('WebSocket opened'); 
 }
